Update Xúc Tiến Thương Mại Việt Nam.html
Signed-off-by: Trần Văn Lĩnh <154715486+Tranlinh15@users.noreply.github.com>

--- a/Xúc Tiến Thương Mại Việt Nam.html
+++ b/Xúc Tiến Thương Mại Việt Nam.html
@@ -658,7 +658,7 @@
 
   <div class="topbar">
     <div class="container topbar-content">
-      <img src="img/logo.png" alt="Logo công ty" class="topbar-logo">
+      <img src="logo.png" alt="Logo công ty" class="topbar-logo">
       <div class="company-info">
         <h2 class="company-name">CÔNG TY CỔ PHẦN XÚC TIẾN THƯƠNG MẠI VÀ ĐẦU TƯ VIỆT NAM</h2>
         <p class="company-sub">Uy tín - Chuyên nghiệp - ISO 9001:2015</p>
