Update Xúc Tiến Thương Mại Việt Nam.html
Signed-off-by: Trần Văn Lĩnh <154715486+Tranlinh15@users.noreply.github.com>

--- a/Xúc Tiến Thương Mại Việt Nam.html
+++ b/Xúc Tiến Thương Mại Việt Nam.html
@@ -924,9 +924,9 @@
       <div class="partner-logos">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Siemens_AG_logo.svg/2560px-Siemens_AG_logo.svg" alt="Siemens" class="partner-logo">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Philips_logo_new.svg/1024px-Philips_logo_new.svg" alt="Philips" class="partner-logo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Thermo_Fisher_Scientific_logo.svg/2560px-Thermo_Fisher_Scientific_logo.svg" alt="Thermo Fisher" class="partner-logo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Sysmex_logo.svg/2560px-Sysmex_logo.svg" alt="Sysmex" class="partner-logo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Hitachi_Logo.svg/2560px-Hitachi_Logo.svg" alt="Hitachi" class="partner-logo">
+        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/5d/Thermo_Fisher_Scientific_Logo.svg/1200px-Thermo_Fisher_Scientific_Logo.svg" alt="Thermo Fisher" class="partner-logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Sysmex_company_logo.svg/1200px-Sysmex_company_logo.svg" alt="Sysmex" class="partner-logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Hitachi_inspire_the_next-Logo.svg/1280px-Hitachi_inspire_the_next-Logo.svg" alt="Hitachi" class="partner-logo">
       </div>
     </div>
   </section>
