Update Xúc Tiến Thương Mại Việt Nam.html
Signed-off-by: Trần Văn Lĩnh <154715486+Tranlinh15@users.noreply.github.com>

--- a/Xúc Tiến Thương Mại Việt Nam.html
+++ b/Xúc Tiến Thương Mại Việt Nam.html
@@ -801,7 +801,7 @@
       <!-- Thư viện hình ảnh thiết bị y tế -->
       <div class="image-gallery" style="margin-top: 40px;">
         <div class="gallery-item">
-          <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Máy X-quang">
+          <img src="https://tamphatmed.vn/vnt_upload/product//01_2020/DRgem.jpg" alt="Máy X-quang">
           <div class="gallery-caption">Máy X-quang kỹ thuật số</div>
         </div>
         <div class="gallery-item">
